[metadata]
name = pychalk
author = Anthony Almarza
author-email = anthony.almarza@gmail.com
summary = Color printing in python
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/anthonyalmarza/chalk
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    ascii colors
    color
    colour
    chalk
    logging
    print

[files]
packages =
    chalk
